--- a/Gson/app/build.gradle
+++ b/Gson/app/build.gradle
@@ -31,13 +31,18 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     //Add libs
     def anko_version ='0.10.8'
     implementation "org.jetbrains.anko:anko:$anko_version"
 
     def gson_version = '2.8.5'
     implementation "com.google.code.gson:gson:$gson_version"
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+
+    def retrofit = '2.6.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
 
 
 }
